language/move-lang/tests/move_check/expansion/duplicate_struct.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_struct.move:3:12
  │
2 │     struct S {}
  │            - Alias previously defined here
3 │     struct S {}
  │            ^ Duplicate module member or alias 'S'. Top level names in a namespace must be unique

