language/move-lang/tests/move_check/expansion/duplicate_struct.move
module M {
    struct S {}
    struct S {}
}
